--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
         <title>ohmyfood</title>
     </head>
     <body>
+        <div class="loader-box">                        
+            <div id="loader"></div> 
+        </div>
         <div class="container">
             <header>
                 <div class="header-logo">
@@ -66,7 +69,7 @@
                             <article class="card-restaurant">
                                 <a href="./restaurants/menu-la-palette-du-gout.html">
                                     <div class="img-restaurant">
-                                        <img src="./assets/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Ilustration d'un plat du restaurant 'La palette du goût'">                                  
+                                        <img src="./assets/images/restaurants/wallpaper-la-palette-du-gout.jpg" alt="Ilustration d'un plat du restaurant 'La palette du goût'">                                  
                                         <div class="new1">
                                             <p>Nouveau</p>
                                         </div>                               
@@ -83,7 +86,7 @@
                             <article class="card-restaurant">                            
                                 <a href="./restaurants/menu-la-note-enchantee.html">
                                     <div class="img-restaurant">
-                                        <img src="./assets/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Ilustration d'un plat du restaurant 'La note enchantée'">
+                                        <img src="./assets/images/restaurants/wallpaper-la-note-enchantee.jpg" alt="Ilustration d'un plat du restaurant 'La note enchantée'">
                                         <div class="new2">
                                             <p>Nouveau</p>
                                         </div>                                
@@ -102,7 +105,7 @@
                             <article class="card-restaurant">
                                 <a href="./restaurants/menu-a-la-francaise.html">
                                     <div class="img-restaurant">
-                                        <img src="./assets/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Ilustration d'un plat du restaurant 'À la française'">
+                                        <img src="./assets/images/restaurants/wallpaper-a-la-francaise.jpg" alt="Ilustration d'un plat du restaurant 'À la française'">
                                     </div>
                                     <div class="card-restaurant-title">
                                         <h3>À la française</h3>
@@ -116,7 +119,7 @@
                             <article class="card-restaurant">
                                 <a href="./restaurants/menu-le-delice-des-sens.html">
                                     <div class="img-restaurant">
-                                        <img src="./assets/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Ilustration d'un plat du restaurant 'Le délice des sens'">
+                                        <img src="./assets/images/restaurants/wallpaper-le-delice-des-sens.jpg" alt="Ilustration d'un plat du restaurant 'Le délice des sens'">
                                     </div>
                                     <div class="card-restaurant-title">
                                         <h3>Le délice des sens</h3>
