--- a/restaurants/menu-a-la-francaise.html
+++ b/restaurants/menu-a-la-francaise.html
@@ -2,14 +2,17 @@
 <html lang="fr">
     <head>
         <meta charset="UTF-8">
-        <meta name="author" content="Loïc Minet">
-	    <meta name="description" content="!">
-	    <meta name="keywords" content="!">
+        <meta name="author" content="Loïc M pour OpenClassRoom">
+	    <meta name="description" content="Menu du restaurant 'À la française'">
+	    <meta name="keywords" content="restaurant, gastronomie française">
 	    <meta name="robots" content="follow">
 	    <meta name="robots" content="index">
 	    <meta http-equiv="X-UA-Compatible" content="IE=edge">
 	    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	    <link rel="stylesheet" href="../css/view.css">
+	    <link rel="stylesheet" href="../css/view-tablette.css">
+	    <link rel="stylesheet" href="../css/view-desktop.css">
+	    <link rel="stylesheet" href="../css/view-desktop-large.css">
         <link rel="icon" type="image/x-icon" href="../assets/images/logo/favicon.ico">
         <title>Menu - À la française</title>
     </head>
@@ -28,40 +31,69 @@
             <main>
                 <div class="container-main">
                     <div class="wallpaper">
-                        <img src="../assets/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Ilustration d'un plat du restaurant 'À la française'">
+                        <img src="../assets/images/restaurants/wallpaper-a-la-francaise.jpg" alt="Ilustration d'un plat du restaurant 'À la française'">
                     </div>
                     <div class="menu">
-                        <div class="restaurant-name">
-                            <h1>À la française</h1>
+                        <div class="restaurant-name-position">
+                            <div class="restaurant-name">
+                                <h1>À la française</h1>
+                            </div>
                             <div class="heart-position">
                                 <button class="heart"></button>
                             </div>
                         </div>
-                        <section class="meal">
+                        <div class="meal">
                             <div class="meal-starters">
                                 <div class="meal-title">
                                     <p>ENTRÉES</p>
                                 </div>
                                 <article class="card-menu">
-                                    <h2>Tartare de poulpe acidulé</h2>
-                                    <div class="card-menu-sub2">
-                                        <p>Aux zestes d'orange</p>
-                                        <p>25€</p>
+                                    <div class="card-menu-content">
+                                        <div class="card-menu-title">
+                                            <h2>Tartare de poulpe acidulé</h2>
+                                        </div>
+                                        <div class="card-menu-details">
+                                            <div class="card-menu-dish-garnish">
+                                                <p>Aux zestes d'orange</p>
+                                            </div>
+                                            <div class="card-menu-price">
+                                                <p>25€</p>
+                                            </div>
+                                        </div>
                                     </div>
+                                    <div class="card-menu-check"></div>
                                 </article>
                                 <article class="card-menu">
-                                    <h2>Velouté de légumes d'antan</h2>
-                                    <div class="card-menu-sub2">
-                                        <p>Carotte, panais, topinambour</p>
-                                        <p>35€</p>
+                                    <div class="card-menu-content">
+                                        <div class="card-menu-title">
+                                            <h2>Velouté de légumes d'antan</h2>
+                                        </div>
+                                        <div class="card-menu-details">
+                                            <div class="card-menu-dish-garnish">
+                                                <p>Carotte, panais, topinambour</p>
+                                            </div>
+                                            <div class="card-menu-price">
+                                                <p>35€</p>
+                                            </div>
+                                        </div>
                                     </div>
+                                    <div class="card-menu-check"></div>
                                 </article>
                                 <article class="card-menu">
-                                    <h2>Soupe à l'oignon</h2>
-                                    <div class="card-menu-sub2">
-                                        <p>Revisitée</p>
-                                        <p>20€</p>
+                                    <div class="card-menu-content">
+                                        <div class="card-menu-title">
+                                            <h2>Soupe à l'oignon</h2>
+                                        </div>
+                                        <div class="card-menu-details">
+                                            <div class="card-menu-dish-garnish">
+                                                <p>Revisitée</p>
+                                            </div>
+                                            <div class="card-menu-price">
+                                                <p>20€</p>
+                                            </div>
+                                        </div>
                                     </div>
+                                    <div class="card-menu-check"></div>
                                 </article>
                             </div>
                             <div class="meal-dishes">
@@ -69,25 +101,52 @@
                                     <p>PLATS</p>
                                 </div>
                                 <article class="card-menu">
-                                    <h2>Coquilles Saint-Jacques</h2>
-                                    <div class="card-menu-sub2">
-                                        <p>Accompagnées d'une purée de panais</p>
-                                        <p>40€</p>
+                                    <div class="card-menu-content">
+                                        <div class="card-menu-title">
+                                            <h2>Coquilles Saint-Jacques</h2>
+                                        </div>
+                                        <div class="card-menu-details">
+                                            <div class="card-menu-dish-garnish">
+                                                <p>Accompagnées d'une purée de panais</p>
+                                            </div>
+                                            <div class="card-menu-price">
+                                                <p>40€</p>
+                                            </div>
+                                        </div>
                                     </div>
+                                    <div class="card-menu-check"></div>
                                 </article>
                                 <article class="card-menu">
-                                    <h2>Magret de canard</h2>
-                                    <div class="card-menu-sub2">
-                                        <p>Et parmentier de pommes de terre</p>
-                                        <p>35€</p>
+                                    <div class="card-menu-content">
+                                        <div class="card-menu-title">
+                                            <h2>Magret de canard</h2>
+                                        </div>
+                                        <div class="card-menu-details">
+                                            <div class="card-menu-dish-garnish">
+                                                <p>Et parmentier de pommes de terre</p>
+                                            </div>
+                                            <div class="card-menu-price">
+                                                <p>35€</p>
+                                            </div>
+                                        </div>
                                     </div>
+                                    <div class="card-menu-check"></div>
                                 </article>
                                 <article class="card-menu">
-                                    <h2>Pigeonneau d’Ille-et-Vilaine</h2>
-                                    <div class="card-menu-sub2">
-                                        <p>Sur son lit de gnocchis aux légumes</p>
-                                        <p>44€</p>
+                                    <div class="card-menu-content">
+                                        <div class="card-menu-title">
+                                            <h2>Pigeonneau d’Ille-et-Vilaine</h2>
+                                        </div>
+                                        <div class="card-menu-details">
+                                            <div class="card-menu-dish-garnish">
+                                                <p>Sur son lit de gnocchis aux légumes</p>
+                                            </div>
+                                            <div class="card-menu-price">
+                                                <p>44€</p>
+                                            </div>
+                                        </div>
                                     </div>
+                                    <div class="card-menu-check"></div>
                                 </article>
                             </div>
                             <div class="meal-desserts">
@@ -95,31 +154,58 @@
                                     <p>DESSERTS</p>
                                 </div>
                                 <article class="card-menu">
-                                    <h2>Pétales de violettes glacés</h2>
-                                    <div class="card-menu-sub2">
-                                        <p>Et purée de noisettes</p>
-                                        <p>18€</p>
+                                    <div class="card-menu-content">
+                                        <div class="card-menu-title">
+                                            <h2>Pétales de violettes glacés</h2>
+                                        </div>
+                                        <div class="card-menu-details">
+                                            <div class="card-menu-dish-garnish">
+                                                <p>Et purée de noisettes</p>
+                                            </div>
+                                            <div class="card-menu-price">
+                                                <p>18€</p>
+                                            </div>
+                                        </div>
                                     </div>
+                                    <div class="card-menu-check"></div>
                                 </article>
                                 <article class="card-menu">
-                                    <h2>Fondant au chocolat</h2>
-                                    <div class="card-menu-sub2">
-                                        <p>Et glace à la vanille de Madagascar</p>
-                                        <p>22€</p>
+                                    <div class="card-menu-content">
+                                        <div class="card-menu-title">
+                                            <h2>Fondant au chocolat</h2>
+                                        </div>
+                                        <div class="card-menu-details">
+                                            <div class="card-menu-dish-garnish">
+                                                <p>Revisité</p>
+                                            </div>
+                                            <div class="card-menu-price">
+                                                <p>22€</p>
+                                            </div>
+                                        </div>
                                     </div>
-                                 </article>
-                                 <article class="card-menu">
-                                    <h2>Millefeuille croustillant</h2>
-                                    <div class="card-menu-sub2">
-                                        <p>Myrtilles et pâte d’amande</p>
-                                        <p>23€</p>
+                                    <div class="card-menu-check"></div>
+                                </article>
+                                <article class="card-menu">
+                                    <div class="card-menu-content">
+                                        <div class="card-menu-title">
+                                            <h2>Millefeuille croustillant</h2>
+                                        </div>
+                                        <div class="card-menu-details">
+                                            <div class="card-menu-dish-garnish">
+                                                <p>Myrtilles et pâte d’amande</p>
+                                            </div>
+                                            <div class="card-menu-price">
+                                                <p>23€</p>
+                                            </div>
+                                        </div>
                                     </div>
+                                    <div class="card-menu-check"></div>
                                 </article>
                             </div>
                             <div class="button-command-flex">
                                 <button type="submit" class="button-command">Commander</button>
                             </div>
-                        </section>
+                        </div>
                     </div>
                 </div>
             </main>
@@ -131,13 +217,13 @@
                     <div class="footer-links">
                         <div class="footer-link-logo">
                             <div class="footer-link-logo-submit"></div>
-                            <a class="footer-link-submit" href="./coming-soon.html">Proposer un restaurant</a>
+                            <a class="footer-link-submit" href="../coming-soon.html">Proposer un restaurant</a>
                         </div>
                         <div class="footer-link-logo">
                             <div class="footer-link-logo-partner"></div>
-                            <a class="footer-link-partner" href="./coming-soon.html">Devenir partenaire</a>
+                            <a class="footer-link-partner" href="../coming-soon.html">Devenir partenaire</a>
                         </div>
-                        <a href="./coming-soon.html">Mention légales</a>
+                        <a href="../coming-soon.html">Mention légales</a>
                         <a href="mailto:contact@ohmyfood.com">Contact</a> 
                     </div>
                 </div>
