--- a/restaurants/menu-la-note-enchantee.html
+++ b/restaurants/menu-la-note-enchantee.html
@@ -2,72 +2,114 @@
 <html lang="fr">
     <head>
         <meta charset="UTF-8">
-        <meta name="author" content="Loïc Minet">
-	    <meta name="description" content="!">
-	    <meta name="keywords" content="!">
+        <meta name="author" content="Loïc M pour OpenClassRoom">
+	    <meta name="description" content="Menu du restaurant 'La note enchantée'">
+	    <meta name="keywords" content="restaurant, gastronomie française">
 	    <meta name="robots" content="follow">
 	    <meta name="robots" content="index">
 	    <meta http-equiv="X-UA-Compatible" content="IE=edge">
 	    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	    <link rel="stylesheet" href="../css/view.css">
+	    <link rel="stylesheet" href="../css/view-tablette.css">
+	    <link rel="stylesheet" href="../css/view-desktop.css">
+	    <link rel="stylesheet" href="../css/view-desktop-large.css">
         <link rel="icon" type="image/x-icon" href="../assets/images/logo/favicon.ico">
         <title>Menu - La note enchantée</title>
     </head>
     <body>
         <div class="container">
-            <div class="header-logo">
-                <img src="../assets/images/logo/ohmyfood@2x.svg" alt="logo ohmyfood">
-                <div class="link-home-possition">
-                    <a href="../index.html">
-                        <div class="link-home"></div>
-                    </a>
+            <header>
+                <div class="header-logo">
+                    <img src="../assets/images/logo/ohmyfood@2x.svg" alt="logo ohmyfood">
+                    <div class="link-home-possition">
+                        <a href="../index.html">
+                            <div class="link-home"></div>
+                        </a>
+                    </div>
                 </div>
-            </div>
             </header>
             <main>
                 <div class="container-main">
                     <div class="wallpaper">
-                        <img src="../assets/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Ilustration d'un plat du restaurant 'La note enchantée'">
+                        <img src="../assets/images/restaurants/wallpaper-la-note-enchantee.jpg" alt="Ilustration d'un plat du restaurant 'La note enchantée'">
                     </div>
                     <div class="menu">
-                        <div class="restaurant-name">
-                            <h1>La note enchantée</h1>
+                        <div class="restaurant-name-position">
+                            <div class="restaurant-name">
+                                <h1>La note enchantée</h1>
+                            </div>
                             <div class="heart-position">
                                 <button class="heart"></button>
                             </div>
                         </div>
-                        <section class="meal">
+                        <div class="meal">
                             <div class="meal-starters">
                                 <div class="meal-title">
                                     <p>ENTRÉES</p>
                                 </div>
                                 <article class="card-menu">
-                                    <h2>Ravioles de foie gras</h2>
-                                    <div class="card-menu-sub2">
-                                        <p>Accompagnées de leur crème à la truffe</p>
-                                        <p>25€</p>
+                                    <div class="card-menu-content">
+                                        <div class="card-menu-title">
+                                            <h2>Ravioles de foie gras</h2>
+                                        </div>
+                                        <div class="card-menu-details">
+                                            <div class="card-menu-dish-garnish">
+                                                <p>Accompagnées de leur crème à la truffe</p>
+                                            </div>
+                                            <div class="card-menu-price">
+                                                <p>25€</p>
+                                            </div>
+                                        </div>
                                     </div>
+                                    <div class="card-menu-check"></div>
                                 </article>
                                 <article class="card-menu">
-                                    <h2>Caviar osciètre</h2>
-                                    <div class="card-menu-sub2">
-                                        <p>Sur blini à la farine de blé noir</p>
-                                        <p>35€</p>
+                                    <div class="card-menu-content">
+                                        <div class="card-menu-title">
+                                            <h2>Caviar osciètre</h2>
+                                        </div>
+                                        <div class="card-menu-details">
+                                            <div class="card-menu-dish-garnish">
+                                                <p>Sur blini à la farine de blé noir</p>
+                                            </div>
+                                            <div class="card-menu-price">
+                                                <p>35€</p>
+                                            </div>
+                                        </div>
                                     </div>
+                                    <div class="card-menu-check"></div>
                                 </article>
                                 <article class="card-menu">
-                                    <h2>Homard et espuma de potiron</h2>
-                                    <div class="card-menu-sub2">
-                                        <p>Marinés aux zestes d'orange</p>
-                                        <p>20€</p>
+                                    <div class="card-menu-content">
+                                        <div class="card-menu-title">
+                                            <h2>Homard et espuma de potiron</h2>
+                                        </div>
+                                        <div class="card-menu-details">
+                                            <div class="card-menu-dish-garnish">
+                                                <p>Marinés aux zestes d'orange</p>
+                                            </div>
+                                            <div class="card-menu-price">
+                                                <p>20€</p>
+                                            </div>
+                                        </div>
                                     </div>
+                                    <div class="card-menu-check"></div>
                                 </article>
                                 <article class="card-menu">
-                                    <h2>Foie gras de canard cuit entier</h2>
-                                    <div class="card-menu-sub2">
-                                        <p>Confiture de figue et pain toasté</p>
-                                        <p>35€</p>
+                                    <div class="card-menu-content">
+                                        <div class="card-menu-title">
+                                            <h2>Foie gras de canard cuit entier</h2>
+                                        </div>
+                                        <div class="card-menu-details">
+                                            <div class="card-menu-dish-garnish">
+                                                <p>Confiture de figue et pain toasté</p>
+                                            </div>
+                                            <div class="card-menu-price">
+                                                <p>35€</p>
+                                            </div>
+                                        </div>
                                     </div>
+                                    <div class="card-menu-check"></div>
                                 </article>
                             </div>
                             <div class="meal-dishes">
@@ -75,25 +117,52 @@
                                     <p>PLATS</p>
                                 </div>
                                 <article class="card-menu">
-                                    <h2>Noix de coquilles Saint-Jacques</h2>
-                                    <div class="card-menu-sub2">
-                                        <p>Sur lit de purée de céleri-rave</p>
-                                        <p>40€</p>
+                                    <div class="card-menu-content">
+                                        <div class="card-menu-title">
+                                            <h2>Noix de coquilles Saint-Jacques</h2>
+                                        </div>
+                                        <div class="card-menu-details">
+                                            <div class="card-menu-dish-garnish">
+                                                <p>Sur lit de purée de céleri-rave</p>
+                                            </div>
+                                            <div class="card-menu-price">
+                                                <p>40€</p>
+                                            </div>
+                                        </div>
                                     </div>
+                                    <div class="card-menu-check"></div>
                                 </article>
                                 <article class="card-menu">
-                                    <h2>Langoustine poêlée</h2>
-                                    <div class="card-menu-sub2">
-                                        <p>Purée de patate douce</p>
-                                        <p>35€</p>
+                                    <div class="card-menu-content">
+                                        <div class="card-menu-title">
+                                            <h2>Langoustine poêlée</h2>
+                                        </div>
+                                        <div class="card-menu-details">
+                                            <div class="card-menu-dish-garnish">
+                                                <p>Purée de patate douce</p>
+                                            </div>
+                                            <div class="card-menu-price">
+                                                <p>35€</p>
+                                            </div>
+                                        </div>
                                     </div>
+                                    <div class="card-menu-check"></div>
                                 </article>
                                 <article class="card-menu">
-                                    <h2>Mijoté de queue de bœuf</h2>
-                                    <div class="card-menu-sub2">
-                                        <p>Et riz sauvage aux zestes de citron</p>
-                                        <p>45€</p>
+                                    <div class="card-menu-content">
+                                        <div class="card-menu-title">
+                                            <h2>Mijoté de queue de bœuf</h2>
+                                        </div>
+                                        <div class="card-menu-details">
+                                            <div class="card-menu-dish-garnish">
+                                                <p>Et riz sauvage aux zestes de citron</p>
+                                            </div>
+                                            <div class="card-menu-price">
+                                                <p>44€</p>
+                                            </div>
+                                        </div>
                                     </div>
+                                    <div class="card-menu-check"></div>
                                 </article>
                             </div>
                             <div class="meal-desserts">
@@ -101,31 +170,58 @@
                                     <p>DESSERTS</p>
                                 </div>
                                 <article class="card-menu">
-                                    <h2>Macaron noisette et chocolat</h2>
-                                    <div class="card-menu-sub2">
-                                        <p>Glace au caramel brun et sel de Guérande</p>
-                                        <p>18€</p>
+                                    <div class="card-menu-content">
+                                        <div class="card-menu-title">
+                                            <h2>Macaron noisette et chocolat</h2>
+                                        </div>
+                                        <div class="card-menu-details">
+                                            <div class="card-menu-dish-garnish">
+                                                <p>Glace au caramel brun et sel de Guérande</p>
+                                            </div>
+                                            <div class="card-menu-price">
+                                                <p>18€</p>
+                                            </div>
+                                        </div>
                                     </div>
+                                    <div class="card-menu-check"></div>
                                 </article>
                                 <article class="card-menu">
-                                    <h2>Baba au rhum revisité</h2>
-                                    <div class="card-menu-sub2">
-                                        <p>Avec son coulis de citron</p>
-                                        <p>22€</p>
+                                    <div class="card-menu-content">
+                                        <div class="card-menu-title">
+                                            <h2>Baba au rhum revisité</h2>
+                                        </div>
+                                        <div class="card-menu-details">
+                                            <div class="card-menu-dish-garnish">
+                                                <p>Avec son coulis de citron</p>
+                                            </div>
+                                            <div class="card-menu-price">
+                                                <p>22€</p>
+                                            </div>
+                                        </div>
                                     </div>
-                                 </article>
-                                 <article class="card-menu">
-                                    <h2>Tarte au citron meringuée</h2>
-                                    <div class="card-menu-sub2">
-                                        <p>Déstructurée</p>
-                                        <p>23€</p>
+                                    <div class="card-menu-check"></div>
+                                </article>
+                                <article class="card-menu">
+                                    <div class="card-menu-content">
+                                        <div class="card-menu-title">
+                                            <h2>Tarte au citron meringuée</h2>
+                                        </div>
+                                        <div class="card-menu-details">
+                                            <div class="card-menu-dish-garnish">
+                                                <p>Déstructurée</p>
+                                            </div>
+                                            <div class="card-menu-price">
+                                                <p>23€</p>
+                                            </div>
+                                        </div>
                                     </div>
+                                    <div class="card-menu-check"></div>
                                 </article>
                             </div>
                             <div class="button-command-flex">
                                 <button type="submit" class="button-command">Commander</button>
                             </div>
-                        </section>                    
+                        </div>
                     </div>
                 </div>
             </main>
@@ -137,13 +233,13 @@
                     <div class="footer-links">
                         <div class="footer-link-logo">
                             <div class="footer-link-logo-submit"></div>
-                            <a class="footer-link-submit" href="./coming-soon.html">Proposer un restaurant</a>
+                            <a class="footer-link-submit" href="../coming-soon.html">Proposer un restaurant</a>
                         </div>
                         <div class="footer-link-logo">
                             <div class="footer-link-logo-partner"></div>
-                            <a class="footer-link-partner" href="./coming-soon.html">Devenir partenaire</a>
+                            <a class="footer-link-partner" href="../coming-soon.html">Devenir partenaire</a>
                         </div>
-                        <a href="./coming-soon.html">Mention légales</a>
+                        <a href="../coming-soon.html">Mention légales</a>
                         <a href="mailto:contact@ohmyfood.com">Contact</a> 
                     </div>
                 </div>
