--- a/restaurants/menu-la-palette-du-gout.html
+++ b/restaurants/menu-la-palette-du-gout.html
@@ -2,9 +2,9 @@
 <html lang="fr">
     <head>
         <meta charset="UTF-8">
-        <meta name="author" content="Loïc Minet">
-	    <meta name="description" content="!">
-	    <meta name="keywords" content="!">
+        <meta name="author" content="Loïc M pour OpenClassRoom">
+	    <meta name="description" content="Menu du restaurant 'La palette du goût'">
+	    <meta name="keywords" content="restaurant, gastronomie française">
 	    <meta name="robots" content="follow">
 	    <meta name="robots" content="index">
 	    <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -31,7 +31,7 @@
             <main>
                 <div class="container-main">
                     <div class="wallpaper">
-                        <img src="../assets/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Ilustration d'un plat du restaurant 'La palette du goût'">
+                        <img src="../assets/images/restaurants/wallpaper-la-palette-du-gout.jpg" alt="Ilustration d'un plat du restaurant 'La palette du goût'">
                     </div>
                     <div class="menu">
                         <div class="restaurant-name-position">
@@ -42,31 +42,58 @@
                                 <button class="heart"></button>
                             </div>
                         </div>
-                        <section class="meal">
+                        <div class="meal">
                             <div class="meal-starters">
                                 <div class="meal-title">
                                     <p>ENTRÉES</p>
                                 </div>
                                 <article class="card-menu">
-                                    <h2>Fricassée d'escargots</h2>
-                                    <div class="card-menu-sub2">
-                                        <p>Au piment d'Espelette</p>
-                                        <p>25€</p>
+                                    <div class="card-menu-content">
+                                        <div class="card-menu-title">
+                                            <h2>Fricassée d'escargots</h2>
+                                        </div>
+                                        <div class="card-menu-details">
+                                            <div class="card-menu-dish-garnish">
+                                                <p>Au piment d'Espelette</p>
+                                            </div>
+                                            <div class="card-menu-price">
+                                                <p>25€</p>
+                                            </div>
+                                        </div>
                                     </div>
+                                    <div class="card-menu-check"></div>
                                 </article>
                                 <article class="card-menu">
-                                    <h2>Foie gras de canard mi-cuit</h2>
-                                    <div class="card-menu-sub2">
-                                        <p>Et ses copeaux de truffe noire</p>
-                                        <p>35€</p>
+                                    <div class="card-menu-content">
+                                        <div class="card-menu-title">
+                                            <h2>Foie gras de canard mi-cuit</h2>
+                                        </div>
+                                        <div class="card-menu-details">
+                                            <div class="card-menu-dish-garnish">
+                                                <p>Et ses copeaux de truffe noire</p>
+                                            </div>
+                                            <div class="card-menu-price">
+                                                <p>35€</p>
+                                            </div>
+                                        </div>
                                     </div>
+                                    <div class="card-menu-check"></div>
                                 </article>
                                 <article class="card-menu">
-                                    <h2>Œuf au plat</h2>
-                                    <div class="card-menu-sub2">
-                                        <p>Assaisonné à la truffe sur lit de caviar</p>
-                                        <p>20€</p>
+                                    <div class="card-menu-content">
+                                        <div class="card-menu-title">
+                                            <h2>Œuf au plat</h2>
+                                        </div>
+                                        <div class="card-menu-details">
+                                            <div class="card-menu-dish-garnish">
+                                                <p>Assaisonné à la truffe sur lit de caviar</p>
+                                            </div>
+                                            <div class="card-menu-price">
+                                                <p>20€</p>
+                                            </div>
+                                        </div>
                                     </div>
+                                    <div class="card-menu-check"></div>
                                 </article>
                             </div>
                             <div class="meal-dishes">
@@ -74,25 +101,52 @@
                                     <p>PLATS</p>
                                 </div>
                                 <article class="card-menu">
-                                    <h2>Filet de bœuf aux herbes</h2>
-                                    <div class="card-menu-sub2">
-                                        <p>Accompagné de sa ribambelle de légumes</p>
-                                        <p>40€</p>
+                                    <div class="card-menu-content">
+                                        <div class="card-menu-title">
+                                            <h2>Filet de bœuf aux herbes</h2>
+                                        </div>
+                                        <div class="card-menu-details">
+                                            <div class="card-menu-dish-garnish">
+                                                <p>Accompagné de sa ribambelle de légumes</p>
+                                            </div>
+                                            <div class="card-menu-price">
+                                                <p>40€</p>
+                                            </div>
+                                        </div>
                                     </div>
+                                    <div class="card-menu-check"></div>
                                 </article>
                                 <article class="card-menu">
-                                    <h2>Parmentier de queue de bœuf</h2>
-                                    <div class="card-menu-sub2">
-                                        <p>À la truffe noire sur sa purée de panais</p>
-                                        <p>35€</p>
+                                    <div class="card-menu-content">
+                                        <div class="card-menu-title">
+                                            <h2>Parmentier de queue de bœuf</h2>
+                                        </div>
+                                        <div class="card-menu-details">
+                                            <div class="card-menu-dish-garnish">
+                                                <p>À la truffe noire sur sa purée de panais</p>
+                                            </div>
+                                            <div class="card-menu-price">
+                                                <p>35€</p>
+                                            </div>
+                                        </div>
                                     </div>
+                                    <div class="card-menu-check"></div>
                                 </article>
                                 <article class="card-menu">
-                                    <h2>Filet de turbot</h2>
-                                    <div class="card-menu-sub2">
-                                        <p>Aux agrumes</p>
-                                        <p>44€</p>
+                                    <div class="card-menu-content">
+                                        <div class="card-menu-title">
+                                            <h2>Filet de turbot</h2>
+                                        </div>
+                                        <div class="card-menu-details">
+                                            <div class="card-menu-dish-garnish">
+                                                <p>Aux agrumes</p>
+                                            </div>
+                                            <div class="card-menu-price">
+                                                <p>44€</p>
+                                            </div>
+                                        </div>
                                     </div>
+                                    <div class="card-menu-check"></div>
                                 </article>
                             </div>
                             <div class="meal-desserts">
@@ -100,31 +154,58 @@
                                     <p>DESSERTS</p>
                                 </div>
                                 <article class="card-menu">
-                                    <h2>Paris-Brest</h2>
-                                    <div class="card-menu-sub2">
-                                        <p>Revisité</p>
-                                        <p>18€</p>
+                                    <div class="card-menu-content">
+                                        <div class="card-menu-title">
+                                            <h2>Paris-Brest</h2>
+                                        </div>
+                                        <div class="card-menu-details">
+                                            <div class="card-menu-dish-garnish">
+                                                <p>Revisité</p>
+                                            </div>
+                                            <div class="card-menu-price">
+                                                <p>18€</p>
+                                            </div>
+                                        </div>
                                     </div>
+                                    <div class="card-menu-check"></div>
                                 </article>
                                 <article class="card-menu">
-                                    <h2>Macaron au chocolat d'exception</h2>
-                                    <div class="card-menu-sub2">
-                                        <p>Et glace à la vanille de Madagascar</p>
-                                        <p>22€</p>
+                                    <div class="card-menu-content">
+                                        <div class="card-menu-title">
+                                            <h2>Macaron au chocolat d'exception</h2>
+                                        </div>
+                                        <div class="card-menu-details">
+                                            <div class="card-menu-dish-garnish">
+                                                <p>Et glace à la vanille de Madagascar</p>
+                                            </div>
+                                            <div class="card-menu-price">
+                                                <p>22€</p>
+                                            </div>
+                                        </div>
                                     </div>
-                                 </article>
-                                 <article class="card-menu">
-                                    <h2>Mousse au chocolat</h2>
-                                    <div class="card-menu-sub2">
-                                        <p>Au piment d'Espelette et à la truffe noire</p>
-                                        <p>23€</p>
+                                    <div class="card-menu-check"></div>
+                                </article>
+                                <article class="card-menu">
+                                    <div class="card-menu-content">
+                                        <div class="card-menu-title">
+                                            <h2>Mousse au chocolat</h2>
+                                        </div>
+                                        <div class="card-menu-details">
+                                            <div class="card-menu-dish-garnish">
+                                                <p>Au piment d'Espelette et à la truffe noire</p>
+                                            </div>
+                                            <div class="card-menu-price">
+                                                <p>23€</p>
+                                            </div>
+                                        </div>
                                     </div>
+                                    <div class="card-menu-check"></div>
                                 </article>
                             </div>
                             <div class="button-command-flex">
                                 <button type="submit" class="button-command">Commander</button>
                             </div>
-                        </section>
+                        </div>
                     </div>
                 </div>
             </main>
@@ -136,13 +217,13 @@
                     <div class="footer-links">
                         <div class="footer-link-logo">
                             <div class="footer-link-logo-submit"></div>
-                            <a class="footer-link-submit" href="./coming-soon.html">Proposer un restaurant</a>
+                            <a class="footer-link-submit" href="../coming-soon.html">Proposer un restaurant</a>
                         </div>
                         <div class="footer-link-logo">
                             <div class="footer-link-logo-partner"></div>
-                            <a class="footer-link-partner" href="./coming-soon.html">Devenir partenaire</a>
+                            <a class="footer-link-partner" href="../coming-soon.html">Devenir partenaire</a>
                         </div>
-                        <a href="./coming-soon.html">Mention légales</a>
+                        <a href="../coming-soon.html">Mention légales</a>
                         <a href="mailto:contact@ohmyfood.com">Contact</a> 
                     </div>
                 </div>
